2014-11-28: Added "!command" to list all available commands.