@@ -1,1 +1,3 @@
 2014-11-28: Added "!command" to list all available commands.
+2014-11-28: Alice responds to thank yous.
+
